kubernetes/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: proyecto-pokemon
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /proyecto-pokemon
