kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proyecto-pokemon
  namespace: proyecto-pokemon
spec:
  selector:
    app: proyecto-pokemon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
