kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto-pokemon
  namespace: proyecto-pokemon
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: proyecto-pokemon-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /proyecto-pokemon
            pathType: Prefix
            backend:
              service:
                name: proyecto-pokemon
                port:
                  number: 80
